# sv-cdccheck

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/slang-cdc/: ast_utils.h  clock_yaml_parser.h  crossing_detector.h  ff_classifier.h  filelist_parser.h  report_generator.h  sync_verifier.h  types.h  waiver.h
src/: ast_utils.cpp  clock_tree.cpp  clock_yaml_parser.cpp  connectivity.cpp  crossing_detector.cpp  ff_classifier.cpp  filelist_parser.cpp  main.cpp  report_generator.cpp  sdc_parser.cpp  sync_verifier.cpp  waiver.cpp
tests/: test_clock_yaml.cpp  test_connectivity_and_crossing.cpp  test_coverage_gaps.cpp  test_edge_cases.cpp  test_ff_classifier.cpp  test_fifo_depth.cpp  test_filelist.cpp  test_helpers.h  test_inter_module_e2e.cpp  test_issue_fixes.cpp  test_phase2_hierarchy.cpp  test_phase3_advanced.cpp  test_phase4_usability.cpp  test_remaining_features.cpp  test_report_generator.cpp  test_sync_patterns.cpp  test_sync_verifier.cpp
